--- a/music.html
+++ b/music.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="music.css">
-    <title>H_ART THE BAND FUN SITE</title>
+    <title>FAVORITE BAND</title>
 </head>
 <body>
     <nav class="top-bar">
