--- a/comments.html
+++ b/comments.html
@@ -97,6 +97,6 @@
     </div>
 </body>
 <footer>
-    <p>Copyright © 2021 Mutua Jnr.</p>
+    <p>Copyright © 2021 Frankfreek.</p>
 </footer>
 </html>
