--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
     </div>
 </body>
 <footer>
-    <p>Copyright © 2021 Mutua Jnr.</p>
+    <p>Copyright © 2021 Frankfreek.</p>
 </footer>
 </html>
