--- a/music.html
+++ b/music.html
@@ -88,6 +88,6 @@
     </div>
 </body>
 <footer>
-    <p>Copyright © 2021 Mutua Jnr.</p>
+    <p>Copyright © 2021 Frankfreek.</p>
 </footer>
 </html>
