--- a/band_profile.html
+++ b/band_profile.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="band_profile.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>FAVORITE BAND</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
 
     </div>
     
-    <div class="container">
+    <div class="container" id="profile">
         
         <div class="profile-container">
             <div class="card">
@@ -76,7 +77,7 @@
         </div> 
     </div>
 </body>
-<footer>
+<footer id="prof-footer">
     <p>Copyright © 2021 Frankfreek.</p>
 </footer>
 </html>
